--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Responsive css-->
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8564444292475105"
+     crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
