--- a/index.html
+++ b/index.html
@@ -792,6 +792,7 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <!--wNumb js-->
     <script src="assets/js/wNumb.js"></script>
+    <script src="assets/js/ubg235_client_v1_1.js"></script>
     <!--NoUiSlider js-->
     <script src="assets/js/nouislider.min.js"></script>
     <!-- Isotop Js -->
