update via index

--- a/idle/index.html
+++ b/idle/index.html
@@ -347,6 +347,7 @@ Even though it's often necessary for advancement, interaction with the game is o
     <script src="../assets/js/jquery.magnific-popup.min.js"></script>
     <!--wNumb js-->
     <script src="../assets/js/wNumb.js"></script>
+    <script src="../assets/js/ubg235_client_v1_1.js"></script>
     <!--NoUiSlider js-->
     <script src="../assets/js/nouislider.min.js"></script>
     <!-- Isotop Js -->
