--- a/bike/index.html
+++ b/bike/index.html
@@ -459,6 +459,7 @@ And it need not include racing. Some of the most popular bike games include driv
     <script src="../assets/js/jquery.magnific-popup.min.js"></script>
     <!--wNumb js-->
     <script src="../assets/js/wNumb.js"></script>
+    <script src="../assets/js/ubg235_client_v1_1.js"></script>
     <!--NoUiSlider js-->
     <script src="../assets/js/nouislider.min.js"></script>
     <!-- Isotop Js -->
