--- a/shooting/index.html
+++ b/shooting/index.html
@@ -656,6 +656,7 @@ Ammunition, armor, health, and weapon upgrades for the player character are freq
     <script src="../assets/js/jquery.magnific-popup.min.js"></script>
     <!--wNumb js-->
     <script src="../assets/js/wNumb.js"></script>
+    <script src="../assets/js/ubg235_client_v1_1.js"></script>
     <!--NoUiSlider js-->
     <script src="../assets/js/nouislider.min.js"></script>
     <!-- Isotop Js -->
