--- a/game/wheely-8.html
+++ b/game/wheely-8.html
@@ -1324,7 +1324,7 @@
                 <script>
                     function loadMainGame()
                     {
-                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://wheelygame.github.io/8/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                        var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://wheelyunblocked.github.io/8/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                         document.getElementById("loadgame").innerHTML = html;
                         document.getElementById('loadgame').scrollIntoView();
                     }
