--- a/game/clicker-heroes.html
+++ b/game/clicker-heroes.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0, user-scalable=no, minimal-ui" />
         <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true,IE=Edge,chrome=1" />
         <meta http-equiv="Content-Language" content="en-US" />
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8564444292475105" crossorigin="anonymous"></script>
                 <!-- Google tag (gtag.js) -->
                 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6DRBMYGF3Q"></script>
                 <script>
