--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="Themescare">
     <!-- Title -->
-    <title>Play Unblocked Games | Unblocked Games Premium</title>
+    <title>Play Unblocked Games | Waffle Web Games</title>
     <meta name="google-site-verification" content="m_KmDTsFMp2x1P7fl4tytie8kl1mkgQldxtrySSeg9g" />
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
