--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
       <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
       <meta name="author" content="Themescare">
       <!-- Title -->
-      <title>Contact Us | Unblocked Games Premium</title>
+      <title>Contact Us | Waffle Web Games</title>
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
